--- a/index.html
+++ b/index.html
@@ -2,18 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Preact-Photon Demo</title>
+    <link rel="stylesheet" href="./node_modules/photon/dist/css/photon.css">
+    <link rel="stylesheet" href="./static/css/photon-overrides.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
   </body>
-
   <script>
-    // You can also require other files to run in this process
-    require('./renderer.js')
+      // You can also require other files to run in this process
+      require('./dist/bundle.js')
   </script>
 </html>
